# AITF

./: .gitignore  README.md  framework_telemetry_requirements.md  talk_talking_points.md  telemetry_gaps_analysis.md
collector/: README.md
collector/config/: aitf-collector-config.yaml
dashboards/grafana/: aitf-overview.json
docs/: deployment-guide.md  opentelemetry-ai-extension.md
examples/: agent_tracing.py  agentic_log_tracing.py  ai_bom_generation.py  aitf_colab_demo.ipynb  basic_llm_tracing.py  dual_pipeline_tracing.py  mcp_tracing.py  model_ops_tracing.py  openrouter_tracing.py  rag_pipeline_tracing.py  shadow_ai_discovery_tracing.py  skills_tracing.py  vendor_mapping_tracing.py
examples/attack-detection-demo/: README.md  attack_scenarios.py
examples/detection-rules/: README.md  aitf_detection_rules.py  anomaly_detector.py
examples/siem-forwarding/: README.md  aws_security_lake.py  splunk_forwarding.py  trend_vision_one.py
examples/synthetic-telemetry/: demo_pipeline.py  generate_synthetic_events.py
integrations/: README.md  __init__.py
integrations/anthropic/: __init__.py
integrations/azure-ai/: __init__.py
integrations/cohere/: __init__.py
integrations/databricks/: __init__.py
integrations/google-ai/: __init__.py
integrations/litellm/: __init__.py
integrations/nvidia/: __init__.py
integrations/openai/: __init__.py
integrations/openrouter/: __init__.py
sdk/go/: aitf.go  go.mod  pipeline.go
sdk/python/: pyproject.toml
sdk/python/src/aitf/: __init__.py  pipeline.py
sdk/python/src/aitf/exporters/: __init__.py  cef_syslog_exporter.py  immutable_log.py  ocsf_exporter.py
sdk/python/src/aitf/generators/: __init__.py  ai_bom.py
sdk/python/src/aitf/instrumentation/: __init__.py  a2a.py  acp.py  agent.py  agentic_log.py  asset_inventory.py  drift_detection.py  identity.py  llm.py  mcp.py  model_ops.py  rag.py  skills.py
sdk/python/src/aitf/ocsf/: __init__.py  compliance_mapper.py  crosswalk.py  event_classes.py  mapper.py  schema.py  vendor_mapper.py
sdk/python/src/aitf/ocsf/vendor_mappings/: __init__.py  crewai.json  langchain.json  langfuse.json  openrouter.json
sdk/python/src/aitf/processors/: __init__.py  compliance_processor.py  cost_processor.py  memory_state.py  pii_processor.py  security_processor.py
sdk/python/src/aitf/semantic_conventions/: __init__.py  attributes.py  metrics.py  resource.py
sdk/python/tests/: test_agent_comm.py  test_agentic_log.py  test_ai_bom.py  test_claude_compliance.py  test_ocsf.py  test_processors.py  test_security_fixes.py  test_semantic_conventions.py  test_vendor_mapper.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs  pipeline.rs  semconv.rs
sdk/rust/src/exporters/: cef_syslog.rs  immutable_log.rs  mod.rs  ocsf.rs
sdk/rust/src/instrumentation/: agent.rs  identity.rs  llm.rs  mod.rs  rag.rs  tool.rs
sdk/rust/src/ocsf/: claude_compliance.rs  claude_compliance_client.rs  compliance.rs  crosswalk.rs  mapper.rs  mod.rs  schema.rs
sdk/rust/tests/: agent_comm.rs  claude_compliance.rs  claude_compliance_client.rs  compliance.rs  exporters.rs  instrumentation.rs  ocsf.rs  pipeline.rs
sdk/typescript/: jest.config.js  package.json  tsconfig.json
spec/: AICMv1.0.3-generated_at_2025_11_10.xlsx  overview.md
spec/ocsf-mapping/: compliance-mapping.md  event-classes.md  ocsf-agent-message-pr-draft.md  ocsf-agentic-crosswalk.md  ocsf-contribution-proposal.md  ocsf-issue-draft.md  (+1 more)
(+131 files in other folders)
